--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WebServices2"
         android:usesCleartextTraffic="true">
+
         <activity android:name=".ShowDataActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
